force-app/main/default/objects/cgcloud__Sales_Folder_Sell_Sheet__c/cgcloud__Sales_Folder_Sell_Sheet__c.object-meta.xml
<CustomObject>
    <description>The object holds the details of the relationship between sales folder and sell sheet.</description>
    <label>Sales Folder Sell Sheet</label>
    <nameField>
        <displayFormat>SFS-{00000000}</displayFormat>
        <label>Sales Folder Sell Sheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Folder Sell Sheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>