force-app/main/default/objects/cgcloud__Sales_Folder_Sell_Sheet__c/fields/cgcloud__Sales_Folder__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sales_Folder__c</fullName>
    <description>Reference to the Sales Folder.</description>
    <label>Sales Folder</label>
    <referenceTo>cgcloud__Sales_Folder__c</referenceTo>
    <relationshipLabel>Sell Sheets</relationshipLabel>
    <relationshipName>Sales_Folder_Sell_Sheets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>