force-app/main/default/objects/cgcloud__Sales_Folder_Sell_Sheet__c/fields/cgcloud__Sell_Sheet__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sell_Sheet__c</fullName>
    <description>Reference to the Sell Sheet.</description>
    <label>Sell Sheet</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cgcloud__Sell_Sheet__c.cgcloud__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.cgcloud__Sales_Org__c</field>
            <operation>equals</operation>
            <valueField>cgcloud__Sell_Sheet__c.cgcloud__Sales_Org__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Sell_Sheet__c</referenceTo>
    <relationshipLabel>Sales Folder Sell Sheets</relationshipLabel>
    <relationshipName>Sales_Folder_Sell_Sheets</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>