force-app/main/default/objects/cgcloud__Sales_Folder_Sell_Sheet__c/fields/cgcloud__Sell_Sheet_Unique__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sell_Sheet_Unique__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This field will be used to ensure one sell sheet is attached only once to a sales folder. This will be a concatenation of Sales Folder Id and Sell Sheet Id. This will be updated by a Workflow.</description>
    <label>Sell Sheet</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>