force-app/main/default/objects/cgcloud__Sales_Folder_Sell_Sheet__c/fields/cgcloud__Sort__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sort__c</fullName>
    <description>Sort Field for Sales Folder Sell Sheet.</description>
    <label>Sort</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>