force-app/main/default/objects/cgcloud__Sales_Folder_Sell_Sheet__c/validationRules/cgcloud__Sell_Sheet_Sales_Org_Equals_Sales_Folder.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Sell_Sheet_Sales_Org_Equals_Sales_Folder</fullName>
    <active>true</active>
    <description>The Sales Folder Sell Sheet, Sales Folder and Sell Sheet must have the same Sales Org.</description>
    <errorConditionFormula>OR (TEXT(cgcloud__Sell_Sheet__r.cgcloud__Sales_Org__c) &lt;&gt; TEXT(cgcloud__Sales_Org__c),
TEXT(cgcloud__Sales_Folder__r.cgcloud__Sales_Org__c) &lt;&gt; TEXT(cgcloud__Sales_Org__c),
TEXT( cgcloud__Sell_Sheet__r.cgcloud__Sales_Org__c) &lt;&gt; TEXT(cgcloud__Sales_Folder__r.cgcloud__Sales_Org__c))</errorConditionFormula>
    <errorMessage>The Sales Folder Sell Sheet, Sales Folder and Sell Sheet must have the same Sales Org.</errorMessage>
</ValidationRule>